best effort fix for menu on small devices
- created clearfix mixin
- various stylelint fixes
- fix for menu on small devices

--- a/src/ui-lib/sass/01-tools/_clear.scss
+++ b/src/ui-lib/sass/01-tools/_clear.scss
@@ -1,17 +1,11 @@
-@mixin clear($before: true, $after: false) {
-  @if ($before) {
-    &::before {
-      content: "";
-      display: table;
-      clear: both;
-    }
+@mixin clear($pseudo: 'before') {
+  @if (not $pseudo == 'before' or not $pseudo == 'after') {
+    @error 'pseudo class #{$pseudo} not valid';
   }
 
-  @if ($after) {
-    &::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
+  &::#{$pseudo} {
+    content: '';
+    display: table;
+    clear: both;
   }
 }
